lab program 9 completed

--- a/Onlinestore/templates/booksEnter.html
+++ b/Onlinestore/templates/booksEnter.html
@@ -1,16 +1,62 @@
-{% extends 'base.html'%}
-
-{% block content%}
-
-<h1>Enter Book info</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        input[type=text]{
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
+      
+      input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      
+      input[type=submit]:hover {
+        background-color: #45a049;
+      }
+      
+      #container {
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+        max-width:600px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top:200px;
+      }
+      </style>
+</head>
+<body>
+    <div id="container">
+    <h1>Enter Book info</h1>
 <form action="enterOpr" method="post">
 
     {% csrf_token %}
-    Account no. :<input type="text" name="accno">
-    Title:<input type="text" name="title">
-    Author :<input type="text" name="author">
+    <label>Account no. :</label><input type="text" name="accno">
+    <label>Title:</label><input type="text" name="title">
+    <label>Author :</label><input type="text" name="author">
 
     <input type="submit">
 </form>
+</div>
+</body>
+</html>
 
-{% endblock %}
+
+
