--- a/Onlinestore/templates/booksHome.html
+++ b/Onlinestore/templates/booksHome.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books Home</title>
+    <style>
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+          }
+          
+          #button2 {background-color: #008CBA;} 
+          #container {
+             display: flex;
+             justify-content:center;
+             max-width:400px; 
+             margin-left: auto;
+             margin-right: auto;
+             margin-top:300px;
+             background-color: #f2f2f2;
+             height:100px;
+             vertical-align:middle;
+
+          }
+    </style>
 </head>
 <body>
-    pending...
+    <div id="container">
+    <form action="enter">
+
+      
+    
+        <input type="submit" value="Enter Book details" class="button">
+    </form>
+    <form action="search">
+
+    
+        <input type="submit" value="Search Books" class="button" id="button2">
+    </form>
+</div>
 </body>
 </html>
